--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nextui-org/theme": "^2.1.18",
     "framer-motion": "^11.0.8",
     "react": "^18.2.0",
+    "react-datepicker": "^6.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.2",
     "sass": "^1.71.1",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
+    "@types/react-datepicker": "^6.0.3",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
