--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-datepicker": "^6.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.2",
+    "react-select": "^5.8.0",
     "sass": "^1.71.1",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
