--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-datepicker": "^6.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-international-phone": "^4.2.6",
     "react-router-dom": "^6.22.2",
     "react-select": "^5.8.0",
     "sass": "^1.71.1",
