--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nextui-org/theme": "^2.1.18",
     "formik": "^2.4.5",
     "framer-motion": "^11.0.8",
+    "next": "^14.1.3",
     "react": "^18.2.0",
     "react-datepicker": "^6.2.0",
     "react-dom": "^18.2.0",
