--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start":"vite",
+    "start": "vite",
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
@@ -18,6 +18,7 @@
     "bootstrap": "^5.3.3",
     "formik": "^2.4.5",
     "framer-motion": "^11.0.8",
+    "json-server": "^1.0.0-alpha.23",
     "next": "^14.1.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
