--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "sass": "^1.71.1",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
+    "yup": "^1.4.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
