--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-select": "^5.8.0",
     "recharts": "^2.12.2",
     "sass": "^1.71.1",
+    "swiper": "^11.0.7",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "yup": "^1.4.0",
