--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@nextui-org/system": "^2.0.15",
     "@nextui-org/theme": "^2.1.18",
     "bootstrap": "^5.3.3",
+    "dayjs": "^1.11.10",
     "formik": "^2.4.5",
     "framer-motion": "^11.0.8",
     "json-server": "^1.0.0-alpha.23",
     "next": "^14.1.3",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.11.2",
     "react-bootstrap": "^2.10.1",
     "react-datepicker": "^6.2.0",
     "react-dom": "^18.2.0",
@@ -29,7 +31,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.22.2",
     "react-select": "^5.8.0",
-    "recharts": "^2.12.2",
+    "recharts": "^2.12.3",
     "sass": "^1.71.1",
     "swiper": "^11.0.7",
     "tailwind-merge": "^2.2.0",
@@ -39,6 +41,7 @@
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
+    "@types/react-big-calendar": "^1.8.9",
     "@types/react-datepicker": "^6.0.3",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
