--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@date-io/date-fns": "^3.0.0",
+    "@hookform/resolvers": "^3.3.4",
     "@nextui-org/button": "^2.0.27",
     "@nextui-org/react": "^2.2.10",
     "@nextui-org/system": "^2.0.15",
@@ -26,11 +27,13 @@
     "framer-motion": "^11.0.8",
     "json-server": "^1.0.0-alpha.23",
     "next": "^14.1.3",
+    "radix-ui": "^1.0.1",
     "react": "^18.2.0",
     "react-big-calendar": "^1.11.2",
     "react-bootstrap": "^2.10.1",
     "react-datepicker": "^6.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.1",
     "react-icons": "^5.0.1",
     "react-international-phone": "^4.2.6",
     "react-query": "^3.39.3",
@@ -41,7 +44,9 @@
     "swiper": "^11.0.7",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^9.0.1",
     "yup": "^1.4.0",
+    "zod": "^3.22.4",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
