--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "@types/react-big-calendar": "^1.8.9",
     "@types/react-datepicker": "^6.0.3",
     "@types/react-dom": "^18.2.19",
-    "@types/testing-library__jest-dom": "^6.0.0",
+    "@types/react-icons": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
     "@vitejs/plugin-react": "^4.2.1",
