--- a/package.json
+++ b/package.json
@@ -20,17 +20,13 @@
     "@nextui-org/system": "^2.0.15",
     "@nextui-org/theme": "^2.1.18",
     "axios": "^1.6.8",
-    "bootstrap": "^5.3.3",
     "date-fns": "^3.6.0",
-    "dayjs": "^1.11.10",
     "formik": "^2.4.5",
     "framer-motion": "^11.0.8",
     "json-server": "^1.0.0-alpha.23",
+    "moment": "^2.30.1",
     "next": "^14.1.3",
-    "radix-ui": "^1.0.1",
     "react": "^18.2.0",
-    "react-big-calendar": "^1.11.2",
-    "react-bootstrap": "^2.10.1",
     "react-datepicker": "^6.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.1",
@@ -40,13 +36,10 @@
     "react-router-dom": "^6.22.2",
     "react-select": "^5.8.0",
     "recharts": "^2.12.3",
-    "sass": "^1.71.1",
     "swiper": "^11.0.7",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
-    "uuid": "^9.0.1",
     "yup": "^1.4.0",
-    "zod": "^3.22.4",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
