--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nextui-org/react": "^2.2.10",
     "@nextui-org/system": "^2.0.15",
     "@nextui-org/theme": "^2.1.18",
+    "@tanstack/react-query": "^5.28.6",
     "axios": "^1.6.8",
     "date-fns": "^3.6.0",
     "formik": "^2.4.5",
@@ -44,6 +45,7 @@
   },
   "devDependencies": {
     "@jest/types": "^29.6.3",
+    "@tanstack/eslint-plugin-query": "^5.28.6",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
     "@types/jest": "^29.5.12",
