--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nextui-org/system": "^2.0.15",
     "@nextui-org/theme": "^2.1.18",
     "@tanstack/react-query": "^5.28.6",
+    "@tanstack/react-table": "^8.15.0",
     "axios": "^1.6.8",
     "date-fns": "^3.6.0",
     "formik": "^2.4.5",
