Revert "deleting imports not used"
This reverts commit e1f8cff1006840c34d828a0e61f7928801af1c77, reversing
changes made to 1451b693da1576ec9f9e1f93e37d70e3f751eb0a.

--- a/package.json
+++ b/package.json
@@ -13,12 +13,8 @@
     "test": "jest"
   },
   "dependencies": {
-    "@date-io/date-fns": "^3.0.0",
-    "@fullcalendar/common": "^5.11.5",
-    "@fullcalendar/core": "^6.1.11",
-    "@fullcalendar/daygrid": "^6.1.11",
-    "@fullcalendar/interaction": "^6.1.11",
-    "@fullcalendar/react": "^6.1.11",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.4",
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.14",
@@ -26,11 +22,12 @@
     "@nextui-org/react": "^2.2.10",
     "@nextui-org/system": "^2.0.15",
     "@nextui-org/theme": "^2.1.18",
-    "@tanstack/react-query": "^5.28.8",
-    "@tanstack/react-table": "^8.15.0",
+    "@react-pdf/renderer": "^3.4.1",
+    "@reduxjs/toolkit": "^2.2.2",
+    "@types/redux-persist": "^4.3.1",
     "axios": "^1.6.8",
     "formik": "^2.4.5",
-    "framer-motion": "^11.0.22",
+    "framer-motion": "^11.0.20",
     "json-server": "^1.0.0-alpha.23",
     "moment": "^2.30.1",
     "next": "^14.1.4",
@@ -54,7 +51,6 @@
   },
   "devDependencies": {
     "@jest/types": "^29.6.3",
-    "@tanstack/eslint-plugin-query": "^5.28.6",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.2",
     "@types/jest": "^29.5.12",
